--- a/package.json
+++ b/package.json
@@ -1,18 +1,54 @@
 {
+  "author": {
+    "name": "FellGill"
+  },
+  "description": "The official Escanor bot | Dev' in discord commando",
+  "keywords": [
+    "discord",
+    "commando",
+    "music",
+    "utility",
+    "fast",
+    "node",
+    "js"
+  ],
+  "license": "SEE LICENSE IN LICENSE FILE",
+  "main": "index.js",
+  "version": "0.0.1-music",
+  "scripts": {
+    "start:dev": "npx nodemon shard.js",
+    "start:dev:noshard": "npx nodemon index.js",
+    "start": "node shard.js",
+    "start:noshard": "node index.js",
+
+    "test": "npx eslint ./",
+    "eslint:fix": "npx eslint ./ --fix"
+  },
   "dependencies": {
-    "discord.js": "^11.4.2"
+    "@mindaugaskasp/node-youtube": "^1.0.1",
+    "crypto": "^1.0.1",
+    "discord.js": "^11.4.2",
+    "discord.js-commando": "^0.10.0",
+    "events": "^3.0.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "fs": "^0.0.1-security",
+    "nekos.life": "^2.0.4",
+    "path": "^0.12.7",
+    "promised-io": "^0.3.5",
+    "sqlite": "^3.0.3"
   },
-  "peerDependencies": {
-    "babel-eslint": "^9.0.0",
-    "bufferutil": "^3.0.3",
-    "eslint-plugin-vue": "^5.0.0-beta.3",
-    "opusscript": "^0.0.6",
-    "uws": "^9.14.0"
-  },
+  "peerDependencies": {},
   "devDependencies": {
+    "babel-eslint": "9.0.0",
+    "erlpack": "discordapp/erlpack",
     "eslint": "^5.16.0",
     "eslint-config-aqua": "^5.0.0",
+    "eslint-plugin-vue": "5.0.0-beta.3",
     "nodemon": "^1.18.11",
-    "pm2": "^3.5.0"
+    "opusscript": "^0.0.6",
+    "uws": "9.14.0"
+  },
+  "eslintConfig": {
+    "extends": "aqua"
   }
 }
