--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nekos.life": "^2.0.4",
     "path": "^0.12.7",
     "promised-io": "^0.3.5",
+    "snekfetch": "^4.0.4",
     "sqlite": "^3.0.3"
   },
   "peerDependencies": {},
