--- a/package.json
+++ b/package.json
@@ -14,29 +14,33 @@
   ],
   "license": "SEE LICENSE IN LICENSE FILE",
   "main": "index.js",
-  "version": "0.0.1-music",
+  "version": "0.1.4",
   "scripts": {
     "start:dev": "npx nodemon shard.js",
-    "start:dev:noshard": "npx nodemon index.js",
     "start": "node shard.js",
-    "start:noshard": "node index.js",
     "test": "npx eslint ./",
     "eslint:fix": "npx eslint ./ --fix"
   },
   "dependencies": {
     "@mindaugaskasp/node-youtube": "^1.0.1",
     "ansi-colors": "^3.2.4",
+    "common-tags": "^1.8.0",
     "crypto": "^1.0.1",
     "discord.js": "^11.4.2",
     "discord.js-commando": "^0.10.0",
     "events": "^3.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "^0.0.1-security",
+    "moment": "^2.24.0",
+    "moment-duration-format": "^2.2.2",
     "nekos.life": "^2.0.4",
     "path": "^0.12.7",
     "promised-io": "^0.3.5",
+    "request-promise": "^4.2.4",
+    "sherlock": "github:neilgupta/Sherlock",
     "snekfetch": "^4.0.4",
-    "sqlite": "^3.0.3"
+    "sqlite": "^3.0.3",
+    "winston": "^3.2.1"
   },
   "peerDependencies": {},
   "devDependencies": {
