--- a/package.json
+++ b/package.json
@@ -37,12 +37,11 @@
     "path": "^0.12.7",
     "promised-io": "^0.3.5",
     "request-promise": "^4.2.4",
-    "sherlock": "github:neilgupta/Sherlock",
+    "sherlockjs": "^1.4.0",
     "snekfetch": "^4.0.4",
     "sqlite": "^3.0.3",
     "winston": "^3.2.1"
   },
-  "peerDependencies": {},
   "devDependencies": {
     "babel-eslint": "9.0.0",
     "erlpack": "discordapp/erlpack",
@@ -51,6 +50,7 @@
     "eslint-plugin-vue": "5.0.0-beta.3",
     "nodemon": "^1.18.11",
     "opusscript": "^0.0.6",
+    "request": "^2.34",
     "uws": "9.14.0"
   },
   "eslintConfig": {
