--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "js"
   ],
   "license": "SEE LICENSE IN LICENSE FILE",
-  "main": "index.js",
+  "main": "shard.js",
   "version": "0.1.4",
   "scripts": {
     "start:dev": "npx nodemon shard.js",
@@ -24,6 +24,7 @@
   "dependencies": {
     "@mindaugaskasp/node-youtube": "^1.0.1",
     "ansi-colors": "^3.2.4",
+    "canvas": "^2.4.1",
     "common-tags": "^1.8.0",
     "crypto": "^1.0.1",
     "discord.js": "^11.4.2",
@@ -40,6 +41,7 @@
     "sherlockjs": "^1.4.0",
     "snekfetch": "^4.0.4",
     "sqlite": "^3.0.3",
+    "tsubaki": "^1.3.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
